--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- My CSS -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Mieles Lupita</title>
 </head>
 <body>
@@ -57,7 +57,7 @@
         <main class="index_main">
 
             <!-- Hero Section -->
-            <section class="heroSection container mt-3">
+            <section class="heroSection container">
                 <div class="row">
                     <div class="heroSection--txt col-12 col-md-5 rounded fadeInTop">
                         <h1>Mieles Lupita</h1>
@@ -198,7 +198,7 @@
         </main>
 
         <!-- Footer-->
-        <footer class="footer bg-dark text-white pt-2 mt-5">
+        <footer class="bg-dark text-white pt-2">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 text-left">
