--- a/pages/productos.html
+++ b/pages/productos.html
@@ -9,167 +9,170 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- My CSS -->
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Mieles Lupita - Productos</title>
 </head>
 <body>
-    <!-- Header (logo + barra de navegacion) -->
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-            <div class="container">
-                <!-- Logo -->
-                <a class="navbar-brand shake" href="../index.html" ><img id="logo" src="../public/logo-final2.png" alt="Logo empresa"></a>
-                <!-- Hamburguer Menu -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <!-- Navbar -->
-                <div class="collapse navbar-collapse text-uppercase" id="navbarNav">
-                    <ul class="navbar-nav text-center ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link "  href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="conocenos.html">Conocenos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="servicios.html">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="#"><i class="bi bi-person-fill"></i></a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="#"><i class="bi bi-cart"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav> 
-    </header>
-
-    <!-- Main Section -->
-    <main class="productos_main">
-        <!-- Sidebar con filtro de Productos -->
-        <section class="sidebar">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container justify-content-center">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#filtro-productos" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        Filtros<i class="bi bi-filter"></i>
+    <div class="main-wrapper">
+        <!-- Header (logo + barra de navegacion) -->
+        <header>
+            <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+                <div class="container">
+                    <!-- Logo -->
+                    <a class="navbar-brand shake" href="../index.html" ><img id="logo" src="../public/logo-final2.png" alt="Logo empresa"></a>
+                    <!-- Hamburguer Menu -->
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse flex-column align-items-start" id="filtro-productos">
-                        <h6>Categorias</h6>
-                        <ul class="navbar-nav flex-column ">
-                            <li><a href="#">Productos de Colmena</a></li>
-                            <li><a href="#">Regalos</a></li>
-                            <li><a href="#">Indumentaria</a></li>                
-                            <li><a href="#">Herramientas</a></li>
-                            <li><a href="#">Maquinaria</a></li>
-                            <li><a href="#">Oferta</a></li>
+                    <!-- Navbar -->
+                    <div class="collapse navbar-collapse text-uppercase" id="navbarNav">
+                        <ul class="navbar-nav text-center ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link "  href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="conocenos.html">Conocenos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contacto.html">Contacto</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="#"><i class="bi bi-person-fill"></i></a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="#"><i class="bi bi-cart"></i></a>
+                            </li>
                         </ul>
-                        <h6 class="mt-5">Por peso</h6>
-                        <ul class="navbar-nav flex-column">
-                            <li><a href="#" >1kg</a></li>
-                            <li><a href="#">1/2kg</a></li>
-                            <li><a href="#">1/4kg</a></li>
-                        </ul>
                     </div>
-                <div>
-            </nav>
-        </section>
+                </div>
+            </nav> 
+        </header>
 
-        <!-- Grid Productos -->
-        <section class="container-fluid">
-            <h2 class="text-center">Productos</h2>
-            <div class="row g-3 row-cols-auto justify-content-center"> 
-                <div class="col">
-                    <div class="card align-items-center">
-                        <h5 class="card-title">Miel de Eucalipto</h5>
-                        <img class="card-img-top" src="../public/miel_eucaliptus.jpg" alt="Imagen de Miel de Eucalipto.">
-                        <p>$99</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card align-items-center ">
-                        <h5 class="card-title">Miel de Algarrobo</h5>
-                        <img class="card-img-top" src="../public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo.">
-                        <p>$99</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card align-items-center">
-                        <h5 class="card-title">Miel de Citrus</h5>
-                        <img class="card-img-top" src="../public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
-                        <p>$99</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card align-items-center">
-                        <h5 class="card-title">Miel de Girasol</h5>
-                        <img class="card-img-top" src="../public/miel_algarrobo.jpg" alt="Imagen de miel de girasol.">
-                        <p>$99</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card align-items-center">
-                        <h5 class="card-title">Polen de Abeja</h5>
-                        <img class="card-img-top" src="../public/polen.jpg" alt="Imagen de polen de abejas.">
-                        <p>$99</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card align-items-center">
-                        <h5 class="card-title">Propoleo</h5>
-                        <img class="card-img-top" src="../public/propoleo.jpg" alt="Imagen de propoleo.">
-                        <p>$99</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-            </div>
+        <!-- Main Section -->
+        <main class="productos_main">
+            <!-- Sidebar con filtro de Productos -->
+            <section class="sidebar">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container justify-content-center">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#filtro-productos" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            Filtros<i class="bi bi-filter"></i>
+                        </button>
+                        <div class="collapse navbar-collapse flex-column align-items-start" id="filtro-productos">
+                            <h6>Categorias</h6>
+                            <ul class="navbar-nav flex-column ">
+                                <li><a href="#">Productos de Colmena</a></li>
+                                <li><a href="#">Regalos</a></li>
+                                <li><a href="#">Indumentaria</a></li>                
+                                <li><a href="#">Herramientas</a></li>
+                                <li><a href="#">Maquinaria</a></li>
+                                <li><a href="#">Oferta</a></li>
+                            </ul>
+                            <h6 class="mt-5">Por peso</h6>
+                            <ul class="navbar-nav flex-column">
+                                <li><a href="#" >1kg</a></li>
+                                <li><a href="#">1/2kg</a></li>
+                                <li><a href="#">1/4kg</a></li>
+                            </ul>
+                        </div>
+                    <div>
+                </nav>
+            </section>
 
-        </section>
-    </main>
+            <!-- Grid Productos -->
+            <section class="container-fluid">
+                <h2 class="text-center">Productos</h2>
+                <div class="row g-3 row-cols-auto justify-content-center"> 
+                    <div class="col">
+                        <div class="card align-items-center">
+                            <h5 class="card-title">Miel de Eucalipto</h5>
+                            <img class="card-img-top" src="../public/miel_eucaliptus.jpg" alt="Imagen de Miel de Eucalipto.">
+                            <p>$99</p>
+                            <a href="#" class="btn btn-primary">Agregar al carro</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card align-items-center ">
+                            <h5 class="card-title">Miel de Algarrobo</h5>
+                            <img class="card-img-top" src="../public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo.">
+                            <p>$99</p>
+                            <a href="#" class="btn btn-primary">Agregar al carro</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card align-items-center">
+                            <h5 class="card-title">Miel de Citrus</h5>
+                            <img class="card-img-top" src="../public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
+                            <p>$99</p>
+                            <a href="#" class="btn btn-primary">Agregar al carro</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card align-items-center">
+                            <h5 class="card-title">Miel de Girasol</h5>
+                            <img class="card-img-top" src="../public/miel_algarrobo.jpg" alt="Imagen de miel de girasol.">
+                            <p>$99</p>
+                            <a href="#" class="btn btn-primary">Agregar al carro</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card align-items-center">
+                            <h5 class="card-title">Polen de Abeja</h5>
+                            <img class="card-img-top" src="../public/polen.jpg" alt="Imagen de polen de abejas.">
+                            <p>$99</p>
+                            <a href="#" class="btn btn-primary">Agregar al carro</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card align-items-center">
+                            <h5 class="card-title">Propoleo</h5>
+                            <img class="card-img-top" src="../public/propoleo.jpg" alt="Imagen de propoleo.">
+                            <p>$99</p>
+                            <a href="#" class="btn btn-primary">Agregar al carro</a>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+        </main>
     
-    <!-- Footer-->
-    <footer class="footer bg-dark text-white pt-2 mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-6 text-left">
-                    <h5 class="text-uppercase font-weight-bold text-warning">Links Utiles</h5>
-                    <ul class="text-white">
-                        <li> <a href="#">Delivery</a></li>
-                        <li><a href="#">Devoluciones</a></li>
-                        <li><a href="#">Login</a></li>
-                    </ul>
+        <!-- Footer-->
+        <footer class="footer bg-dark text-white pt-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 text-left">
+                        <h5 class="text-uppercase font-weight-bold text-warning">Links Utiles</h5>
+                        <ul class="text-white">
+                            <li> <a href="#">Delivery</a></li>
+                            <li><a href="#">Devoluciones</a></li>
+                            <li><a href="#">Login</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <h5 class="text-uppercase font-weight-bold text-warning">Contacto</h5>
+                        <ul>
+                            <li><i class="bi bi-house-door"></i>Avenida San Lorenzo 1234, Cordoba, Argentina</li>
+                            <li><i class="bi bi-telephone-fill"></i>+54 0303 222222</li>
+                            <li><i class="bi bi-envelope"></i>mieleslupita@gmail.com</li>
+                            <li>Redes Sociales: <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a> <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <h5 class="text-uppercase font-weight-bold text-warning">Contacto</h5>
-                    <ul>
-                        <li><i class="bi bi-house-door"></i>Avenida San Lorenzo 1234, Cordoba, Argentina</li>
-                        <li><i class="bi bi-telephone-fill"></i>+54 0303 222222</li>
-                        <li><i class="bi bi-envelope"></i>mieleslupita@gmail.com</li>
-                        <li>Redes Sociales: <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a> <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
-                        </li>
-                    </ul>
+                <div class="row">
+                    <div class="col-12">
+                        <h5>Copyright &copy; 2022 Mieles Lupita</h5>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <h5>Copyright &copy; 2022 Mieles Lupita</h5>
-                </div>
-            </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
